<resources>
    <string name="app_name">ParkIP 4 Android</string>
    <string name="action_settings">Settings</string>
    <string name="choose_country">Choose a country:</string>
    <string name="button_go">GO</string>
    <string-array name="array_euro">
        <item>Albania</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Bosnia &amp; Herzegovina</item>
        <item>Bulgaria</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Estonia</item>
        <item>Finland</item>
        <item>France</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>Ireland</item>
        <item>Italy</item>
        <item>Latvia</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macedonia</item>
        <item>Malta</item>
        <item>Monaco</item>
        <item>Montenegro</item>
        <item>Netherlands</item>
        <item>Norway</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>San Marino</item>
        <item>Serbia</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Turkey</item>
        <item>United Kingdom</item>
    </string-array>
    <string-array name="array_pct">
        <item>Algeria</item>
        <item>Australia</item>
        <item>Belize</item>
        <item>Brazil</item>
        <item>Canada</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Eurasia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Guatemala</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Israel</item>
        <item>Japan</item>
        <item>Kenya</item>
        <item>Malaysia</item>
        <item>Mexico</item>
        <item>Morocco</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Nigeria</item>
        <item>Norway</item>
        <item>OAPI</item>
        <item>Panama</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Russia</item>
        <item>Singapore</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>Spain</item>
        <item>Syria</item>
        <item>Thailand</item>
        <item>Tunisia</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>Vietnam</item>
    </string-array>
    <string-array name="array_of_countries">
        <item>Afghanistan-93</item>
        <item>Albania-355</item>
        <item>Algeria-213</item>
        <item>Andorra-376</item>
        <item>Angola-244</item>
        <item>Antarctica-672</item>
        <item>Argentina-54</item>
        <item>Armenia-374</item>
        <item>Aruba-297</item>
        <item>Australia-61</item>
        <item>Austria-43</item>
        <item>Azerbaijan-994</item>
        <item>Bahrain-973</item>
        <item>Bangladesh-880</item>
        <item>Belarus-375</item>
        <item>Belgium-32</item>
        <item>Belize-501</item>
        <item>Benin-229</item>
        <item>Bhutan-975</item>
        <item>Bolivia-591</item>
        <item>Bosnia &amp; Herzegovina-387</item>
        <item>Botswana-267</item>
        <item>Brazil-55</item>
        <item>Brunei Darussalam-673</item>
        <item>Bulgaria-359</item>
        <item>Burkina Faso-226</item>
        <item>Myanmar-95</item>
        <item>Burundi-257</item>
        <item>Cambodia-855</item>
        <item>Cameroon-237</item>
        <item>Canada-1</item>
        <item>Cape Verde-238</item>
        <item>Central African Republic-236</item>
        <item>Chad-235</item>
        <item>Chile-56</item>
        <item>China-86</item>
        <item>Christmas Island-61</item>
        <item>Cocos (keeling) Islands-61</item>
        <item>Colombia-57</item>
        <item>Comoros-269</item>
        <item>Congo-242</item>
        <item>Congo-243</item>
        <item>Cook Islands-682</item>
        <item>Costa Rica-506</item>
        <item>Croatia-385</item>
        <item>Cuba-53</item>
        <item>Cyprus-357</item>
        <item>Czech Republic-420</item>
        <item>Denmark-45</item>
        <item>Djibouti-253</item>
        <item>Timor-leste-670</item>
        <item>Ecuador-593</item>
        <item>Egypt-20</item>
        <item>El Salvador-503</item>
        <item>Equatorial Guinea-240</item>
        <item>Eritrea-291</item>
        <item>Estonia-372</item>
        <item>Ethiopia-251</item>
        <item>Falkland Islands (malvinas)-500</item>
        <item>Faroe Islands-298</item>
        <item>Fiji-679</item>
        <item>Finland-358</item>
        <item>France-33</item>
        <item>French Polynesia-689</item>
        <item>Gabon-241</item>
        <item>Gambia-220</item>
        <item>Georgia-995</item>
        <item>Germany-49</item>
        <item>Ghana-233</item>
        <item>Gibraltar-350</item>
        <item>Greece-30</item>
        <item>Greenland-299</item>
        <item>Guatemala-502</item>
        <item>Guinea-224</item>
        <item>Guinea-bissau-245</item>
        <item>Guyana-592</item>
        <item>Haiti-509</item>
        <item>Honduras-504</item>
        <item>Hong Kong-852</item>
        <item>Hungary-36</item>
        <item>India-91</item>
        <item>Indonesia-62</item>
        <item>Iran-98</item>
        <item>Iraq-964</item>
        <item>Ireland-353</item>
        <item>Isle Of Man-44</item>
        <item>Israel-972</item>
        <item>Italy-39</item>
        <item>Côte D\&apos;ivoire-225</item>
        <item>Japan-81</item>
        <item>Jordan-962</item>
        <item>Kazakhstan-7</item>
        <item>Kenya-254</item>
        <item>Kiribati-686</item>
        <item>Kuwait-965</item>
        <item>Kyrgyzstan-996</item>
        <item>Lao People\&apos;s Democratic Republic-856</item>
        <item>Latvia-371</item>
        <item>Lebanon-961</item>
        <item>Lesotho-266</item>
        <item>Liberia-231</item>
        <item>Libya-218</item>
        <item>Liechtenstein-423</item>
        <item>Lithuania-370</item>
        <item>Luxembourg-352</item>
        <item>Macao-853</item>
        <item>Macedonia-389</item>
        <item>Madagascar-261</item>
        <item>Malawi-265</item>
        <item>Malaysia-60</item>
        <item>Maldives-960</item>
        <item>Mali-223</item>
        <item>Malta-356</item>
        <item>Marshall Islands-692</item>
        <item>Mauritania-222</item>
        <item>Mauritius-230</item>
        <item>Mayotte-262</item>
        <item>Mexico-52</item>
        <item>Micronesia-691</item>
        <item>Moldova-373</item>
        <item>Monaco-377</item>
        <item>Mongolia-976</item>
        <item>Montenegro-382</item>
        <item>Morocco-212</item>
        <item>Mozambique-258</item>
        <item>Namibia-264</item>
        <item>Nauru-674</item>
        <item>Nepal-977</item>
        <item>Netherlands-31</item>
        <item>New Caledonia-687</item>
        <item>New Zealand-64</item>
        <item>Nicaragua-505</item>
        <item>Niger-227</item>
        <item>Nigeria-234</item>
        <item>Niue-683</item>
        <item>Korea, Democratic People\&apos;s Republic Of-850</item>
        <item>Norway-47</item>
        <item>Oman-968</item>
        <item>Pakistan-92</item>
        <item>Palau-680</item>
        <item>Panama-507</item>
        <item>Papua New Guinea-675</item>
        <item>Paraguay-595</item>
        <item>Peru-51</item>
        <item>Philippines-63</item>
        <item>Pitcairn-870</item>
        <item>Poland-48</item>
        <item>Portugal-351</item>
        <item>Puerto Rico-1</item>
        <item>Qatar-974</item>
        <item>Romania-40</item>
        <item>Russian Federation-7</item>
        <item>Rwanda-250</item>
        <item>Saint Barthélemy-590</item>
        <item>Samoa-685</item>
        <item>San Marino-378</item>
        <item>Sao Tome And Principe-239</item>
        <item>Saudi Arabia-966</item>
        <item>Senegal-221</item>
        <item>Serbia-381</item>
        <item>Seychelles-248</item>
        <item>Sierra Leone-232</item>
        <item>Singapore-65</item>
        <item>Slovakia-421</item>
        <item>Slovenia-386</item>
        <item>Solomon Islands-677</item>
        <item>Somalia-252</item>
        <item>South Africa-27</item>
        <item>Korea, Republic Of-82</item>
        <item>Spain-34</item>
        <item>Sri Lanka-94</item>
        <item>Saint Helena, Ascension And Tristan Da Cunha-290</item>
        <item>Saint Pierre And Miquelon-508</item>
        <item>Sudan-249</item>
        <item>Suriname-597</item>
        <item>Swaziland-268</item>
        <item>Sweden-46</item>
        <item>Switzerland-41</item>
        <item>Syrian Arab Republic-963</item>
        <item>Taiwan, Province Of China-886</item>
        <item>Tajikistan-992</item>
        <item>Tanzania, United Republic Of-255</item>
        <item>Thailand-66</item>
        <item>Togo-228</item>
        <item>Tokelau-690</item>
        <item>Tonga-676</item>
        <item>Tunisia-216</item>
        <item>Turkey-90</item>
        <item>Turkmenistan-993</item>
        <item>Tuvalu-688</item>
        <item>United Arab Emirates-971</item>
        <item>Uganda-256</item>
        <item>United Kingdom-44</item>
        <item>Ukraine-380</item>
        <item>Uruguay-598</item>
        <item>United States-1</item>
        <item>Uzbekistan-998</item>
        <item>Vanuatu-678</item>
        <item>Holy See (vatican City State)-39</item>
        <item>Venezuela, Bolivarian Republic Of-58</item>
        <item>Viet Nam-84</item>
        <item>Wallis And Futuna-681</item>
        <item>Yemen-967</item>
        <item>Zambia-260</item>
        <item>Zimbabwe-263</item>
    </string-array>
    <string name="title_activity_country">CountryActivity</string>
    <string name="pct_deadline">Deadline</string>
    <string name="pct_power_of_attorney">Power of Attorney</string>
    <string name="pct_assignments">Assignments</string>
    <string name="pct_language">Language</string>
    <string name="pct_translation_extension">Translation Extension</string>
    <string name="pct_excess_claim_fee">Excess Claim Fee</string>
    <string name="pct_examination_request">Examination Request</string>
    <string name="euro_london_agreement">London agreement?</string>
    <string name="euro_language">Official language:</string>
    <string name="euro_translations">Translations Required:</string>
    <string name="euro_forms">Forms:</string>
</resources>